--- a/tvcust/src/main/res/layout/activity_complain.xml
+++ b/tvcust/src/main/res/layout/activity_complain.xml
@@ -49,35 +49,14 @@
                     android:background="@color/white"
                     android:orientation="vertical">
 
-                    <LinearLayout
+                    <com.zhy.view.flowlayout.TagFlowLayout
+                        android:id="@+id/flow_complain"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="20dp"
-                        android:layout_marginTop="20dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/text_complain_serv"
-                            android:layout_width="80dp"
-                            android:layout_height="40dp"
-                            android:layout_marginLeft="26dp"
-                            android:background="@drawable/hot_rect_corner_glod_full_line"
-                            android:gravity="center"
-                            android:text="客服投诉"
-                            android:textColor="@drawable/color_tag_text"
-                            android:textSize="@dimen/text_nomal_small" />
-
-                        <TextView
-                            android:id="@+id/text_complain_tech"
-                            android:layout_width="80dp"
-                            android:layout_height="40dp"
-                            android:layout_marginLeft="10dp"
-                            android:background="@drawable/hot_rect_corner_glod_full_line"
-                            android:gravity="center"
-                            android:text="技术投诉"
-                            android:textColor="@drawable/color_tag_text"
-                            android:textSize="@dimen/text_nomal_small" />
-                    </LinearLayout>
+                        android:layout_marginBottom="22dp"
+                        android:layout_marginTop="22dp"
+                        app:gravity="center"
+                        app:max_select="-1" />
 
                     <View
                         android:layout_width="match_parent"
