--- a/tvcust/src/main/res/layout/activity_reqdescribe.xml
+++ b/tvcust/src/main/res/layout/activity_reqdescribe.xml
@@ -30,6 +30,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/lay_reqfix_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="0dp">
