--- a/tvcust/src/main/res/layout/dialog_choose_describe.xml
+++ b/tvcust/src/main/res/layout/dialog_choose_describe.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/lay_dialog_describe_finish"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -28,6 +29,53 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lay_dialog_describe_vali_pass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/text_dialog_describe_vali_pass"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/hot_lay_item_dark"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="验收通过"
+            android:textColor="@color/sb_blue"
+            android:textSize="@dimen/text_big" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:src="@drawable/line" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/lay_dialog_describe_vali_refuse"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/text_dialog_describe_vali_refuse"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/hot_lay_item_dark"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="验收拒绝"
+            android:textColor="@color/sb_blue"
+            android:textSize="@dimen/text_big" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:src="@drawable/line" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/lay_dialog_describe_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -50,6 +98,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lay_dialog_describe_bank"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -72,6 +121,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lay_dialog_describe_touser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -94,6 +144,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lay_dialog_describe_describe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -105,7 +156,30 @@
             android:background="@drawable/hot_lay_item_dark"
             android:gravity="center"
             android:padding="10dp"
-            android:text="追加描述"
+            android:text="追加给技术"
+            android:textColor="@color/sb_text_blank"
+            android:textSize="@dimen/text_big" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:src="@drawable/line" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/lay_dialog_describe_toheadtech"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/text_dialog_describe_toheadtech"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/hot_lay_item_dark"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="追加给总技术"
             android:textColor="@color/sb_text_blank"
             android:textSize="@dimen/text_big" />
 
