--- a/tvcust/src/main/res/layout/activity_eva.xml
+++ b/tvcust/src/main/res/layout/activity_eva.xml
@@ -23,6 +23,7 @@
 
             <TextView
                 android:id="@+id/text_eva_complain"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="right"
