--- a/tvcust/src/main/res/layout/activity_countorder.xml
+++ b/tvcust/src/main/res/layout/activity_countorder.xml
@@ -78,20 +78,25 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <FrameLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="1dp"
-                    android:background="@color/white">
+                    android:layout_height="200dp"
+                    android:orientation="horizontal">
 
-                    <WebView
-                        android:id="@+id/web_countorder"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_margin="10dp"
-                        android:scrollbars="none" />
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/chat_finish"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/white" />
 
-                </FrameLayout>
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/chat_unfinish"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/white" />
+                </LinearLayout>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycle"
