--- a/tvcust/src/main/res/layout/activity_test.xml
+++ b/tvcust/src/main/res/layout/activity_test.xml
@@ -85,4 +85,15 @@
         android:layout_alignRight="@+id/share"
         android:layout_alignEnd="@+id/share" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="nettest"
+        android:onClick="onClick"
+        android:id="@+id/nettest"
+        android:layout_below="@+id/clear"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="28dp" />
+
 </RelativeLayout>
