--- a/tvcust/src/main/res/layout/activity_sign.xml
+++ b/tvcust/src/main/res/layout/activity_sign.xml
@@ -32,6 +32,7 @@
             app:layout_scrollFlags="scroll|enterAlways">
 
             <TextView
+                android:id="@+id/text_sign_do"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
