--- a/tvcust/src/main/res/layout/item_recycle_quan.xml
+++ b/tvcust/src/main/res/layout/item_recycle_quan.xml
@@ -7,11 +7,11 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/img_quan_item_pic"
         android:layout_width="83dp"
         android:layout_height="83dp"
         android:layout_margin="10dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/test"/>
+        android:scaleType="centerCrop"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,23 +22,23 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/text_quan_item_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:ellipsize="end"
             android:textSize="@dimen/text_nomal"
-            android:textColor="@color/sb_text_blank_deep"
-            android:text="六月份开启设备维护活动，所有购买设备都需登记"/>
+            android:textColor="@color/sb_text_blank_deep"/>
 
         <TextView
+            android:id="@+id/text_quan_item_describe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:ellipsize="end"
             android:maxLines="3"
             android:textSize="@dimen/text_small"
-            android:textColor="@color/sb_text_dark_blank"
-            android:text="发了那么多的VR设计教程，不过有些设计师对这个行业还不是很了解。今天这篇文章就专门讲解一下,发了那么多的VR设计教程来普及，今天这篇文章就专门讲解一下,发了那么多的VR设计教程来普及今天这篇文章就专门讲解一下,发了那么多的VR设计教程来普及"/>
+            android:textColor="@color/sb_text_dark_blank"/>
 
     </LinearLayout>
 
