--- a/tvcust/src/main/res/layout/activity_infodetail.xml
+++ b/tvcust/src/main/res/layout/activity_infodetail.xml
@@ -29,7 +29,7 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <com.sobey.common.view.TouchWebView
+        <WebView
             android:id="@+id/webview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
