--- a/tvcust/src/main/res/layout/activity_web.xml
+++ b/tvcust/src/main/res/layout/activity_web.xml
@@ -22,7 +22,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <com.sobey.common.view.TouchWebView
+    <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
