--- a/tvcust/src/main/res/layout/item_recycle_msg.xml
+++ b/tvcust/src/main/res/layout/item_recycle_msg.xml
@@ -3,92 +3,110 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardCornerRadius="0dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@color/white"
-    app:cardCornerRadius="0dp">
+    android:layout_marginTop="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:background="@color/white"
         android:orientation="vertical">
-
-        <TextView
-            style="@style/text_big_dark"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
-            android:text="维修进度报告" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/sb_bk"
-            android:paddingBottom="15dp"
-            android:paddingTop="15dp">
-
-            <ImageView
-                android:id="@+id/img_item_msg_header"
-                android:layout_width="63dp"
-                android:layout_height="63dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/test" />
-
-            <TextView
-                android:id="@+id/text_item_msg_ip"
-                style="@style/text_big_dark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/img_item_msg_header"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_toEndOf="@+id/img_item_msg_header"
-                android:layout_toRightOf="@+id/img_item_msg_header"
-                android:text="IP:192.168.0.12" />
-
-            <TextView
-                android:id="@+id/text_item_msg_name"
-                style="@style/text_big_dark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/text_item_msg_ip"
-                android:layout_alignStart="@+id/text_item_msg_ip"
-                android:layout_below="@+id/text_item_msg_ip"
-                android:layout_marginTop="5dp"
-                android:text="机器名:ENET-1" />
-        </RelativeLayout>
-
-        <TextView
-            style="@style/text_big_dark"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
-            android:text="已派遣维修人员，请耐心等待" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text_order_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="16dp"
+            android:textColor="@color/cc_text_blank"
+            android:textSize="@dimen/text_small"
+            android:text="订单编号:685478954898" />
+
+            <TextView
+                android:id="@+id/text_order_time"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical|right"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="12dp"
+                android:layout_marginTop="16dp"
+                android:textColor="@color/cc_text_dark"
+                android:textSize="@dimen/text_small"
+                android:text="2016-06-27" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
+
+            <ImageView
+                android:id="@+id/img_order_pic"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:scaleType="center"
+                android:background="@color/sb_bk_light"
+                android:src="@drawable/icon_order_fix" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:paddingLeft="10dp"
+                android:background="@color/sb_bk_light"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/text_order_question"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="硬件问题：CPU过载报警"
+                    android:textColor="@color/sb_text_blank"
+                    android:textSize="@dimen/text_nomal"/>
+
+                <TextView
+                    android:id="@+id/text_order_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:text="正在派单"
+                    android:textColor="@color/sb_blue"
+                    android:textSize="@dimen/text_nomal"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="16dp"
             android:gravity="right">
 
             <TextView
-                android:id="@+id/text_item_msg_delete"
+                android:id="@+id/text_order_cancle"
                 android:textColor="@color/sb_text_dark"
                 android:textSize="@dimen/text_nomal"
                 android:layout_width="80dp"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
                 android:gravity="center"
-                android:layout_marginRight="20dp"
                 android:background="@drawable/shape_rect_corner_none_line"
                 android:paddingBottom="5dp"
                 android:paddingLeft="10dp"
@@ -97,13 +115,13 @@
                 android:text="删除消息" />
 
             <TextView
-                android:id="@+id/text_item_msg_go"
+                android:id="@+id/text_order_go"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_nomal"
                 android:layout_width="80dp"
-                android:layout_height="30dp"
-                android:gravity="center"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
+                android:gravity="center"
                 android:background="@drawable/shape_rect_corner_blue"
                 android:paddingBottom="5dp"
                 android:paddingLeft="10dp"
@@ -113,4 +131,5 @@
         </LinearLayout>
 
     </LinearLayout>
+
 </android.support.v7.widget.CardView>
