--- a/tvcust/src/main/res/layout/item_recycle_signlist.xml
+++ b/tvcust/src/main/res/layout/item_recycle_signlist.xml
@@ -8,6 +8,7 @@
     android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/text_gign_item_grades"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -16,6 +17,7 @@
         android:text="获得10积分"/>
 
     <TextView
+        android:id="@+id/text_gign_item_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
