--- a/tvcust/src/main/res/layout/activity_reqdescribe.xml
+++ b/tvcust/src/main/res/layout/activity_reqdescribe.xml
@@ -135,7 +135,7 @@
             android:background="@color/white"
             android:orientation="vertical">
 
-            <EditText
+            <com.sobey.common.view.EmojiEditText
                 android:id="@+id/edit_reqfix_detail"
                 style="@style/edit_hidden"
                 android:layout_width="match_parent"
