--- a/tvcust/src/main/res/layout/activity_reqfix.xml
+++ b/tvcust/src/main/res/layout/activity_reqfix.xml
@@ -24,6 +24,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
+        android:id="@+id/showingroup"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -130,7 +131,7 @@
             android:background="@color/white"
             android:orientation="vertical">
 
-            <EditText
+            <com.sobey.common.view.EmojiEditText
                 android:id="@+id/edit_reqfix_detail"
                 style="@style/edit_hidden"
                 android:layout_width="match_parent"
