--- a/tvcust/src/main/res/layout/fragment_login.xml
+++ b/tvcust/src/main/res/layout/fragment_login.xml
@@ -42,7 +42,7 @@
                 android:layout_marginRight="10dp"
                 android:background="@drawable/line" />
 
-            <EditText
+            <com.sobey.common.view.EmojiEditText
                 android:id="@+id/edit_login_password"
                 style="@style/edit_hidden_login"
                 android:layout_width="match_parent"
