--- a/tvcust/src/main/res/layout/activity_complain.xml
+++ b/tvcust/src/main/res/layout/activity_complain.xml
@@ -69,7 +69,7 @@
                         android:layout_marginTop="10dp"
                         android:background="@color/white">
 
-                        <EditText
+                        <com.sobey.common.view.EmojiEditText
                             android:id="@+id/edit_complain_describe"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
