--- a/tvcust/src/main/res/layout/activity_medetail.xml
+++ b/tvcust/src/main/res/layout/activity_medetail.xml
@@ -110,7 +110,7 @@
                             android:textColor="@color/sb_text_blank"
                             android:textSize="@dimen/text_nomal" />
 
-                        <EditText
+                        <com.sobey.common.view.EmojiEditText
                             android:id="@+id/edit_medetail_name"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -177,7 +177,7 @@
                             android:textColor="@color/sb_text_blank"
                             android:textSize="@dimen/text_nomal" />
 
-                        <EditText
+                        <com.sobey.common.view.EmojiEditText
                             android:id="@+id/edit_medetail_mail"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
