--- a/tvcust/src/main/res/layout/activity_test.xml
+++ b/tvcust/src/main/res/layout/activity_test.xml
@@ -96,4 +96,22 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="28dp" />
 
+    <com.sobey.common.view.EmojiEditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/edittext"
+        android:layout_centerVertical="true"
+        android:layout_alignRight="@+id/go"
+        android:layout_alignEnd="@+id/go" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="nettest"
+        android:onClick="onClick"
+        android:id="@+id/edit"
+        android:layout_below="@+id/edittext"
+        android:layout_toLeftOf="@+id/acache"
+        android:layout_toStartOf="@+id/acache" />
+
 </RelativeLayout>
