--- a/tvcust/src/main/res/layout/fragment_comp_office.xml
+++ b/tvcust/src/main/res/layout/fragment_comp_office.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp">
 
-        <EditText
+        <com.sobey.common.view.EmojiEditText
             android:id="@+id/filter_edit"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
