--- a/tvcust/src/main/res/layout/fragment_info.xml
+++ b/tvcust/src/main/res/layout/fragment_info.xml
@@ -75,11 +75,11 @@
             android:id="@+id/tab_info"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/sb_bk_dark"
+            android:background="@color/white"
             app:tabIndicatorColor="@color/sb_blue"
             app:tabIndicatorHeight="3dp"
-            app:tabSelectedTextColor="@color/white"
-            app:tabTextColor="@color/sb_text_light" />
+            app:tabSelectedTextColor="@color/sb_text_dark"
+            app:tabTextColor="@color/sb_text_blank" />
 
 
     </android.support.design.widget.AppBarLayout>
