test order info allmost

--- a/tvcust/src/main/res/layout/item_list_track.xml
+++ b/tvcust/src/main/res/layout/item_list_track.xml
@@ -47,6 +47,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:paddingBottom="20dp"
+            android:layout_marginRight="20dp"
             android:orientation="vertical">
 
             <TextView
