--- a/tvcust/src/main/res/drawable/shape_oval_sign_hot.xml
+++ b/tvcust/src/main/res/drawable/shape_oval_sign_hot.xml
@@ -2,12 +2,12 @@
     android:shape="oval" >
 
     <!-- 填充 -->
-    <solid android:color="@color/sb_sign_light" />
+    <solid android:color="@color/sb_blue" />
 
     <!-- 描边 -->
     <stroke
         android:width="10dp"
-        android:color="@color/sb_sign_light_trans" />
+        android:color="@color/sb_blue_hint_trans" />
 
     <size
         android:width="100dp"
