--- a/tvcust/src/main/res/layout/activity_medetail.xml
+++ b/tvcust/src/main/res/layout/activity_medetail.xml
@@ -78,7 +78,7 @@
                         android:layout_marginBottom="40dp"
                         android:layout_marginTop="30dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/default_bk" />
+                        android:src="@drawable/me_header_defalt" />
 
                 </LinearLayout>
 
