--- a/tvcust/src/main/res/layout/activity_modifyphone.xml
+++ b/tvcust/src/main/res/layout/activity_modifyphone.xml
@@ -110,7 +110,7 @@
             app:cpb_colorProgress="#00000000"
             app:cpb_iconComplete="@drawable/ic_action_accept"
             app:cpb_iconError="@drawable/ic_action_cancel"
-            app:cpb_textIdle="问题提交" />
+            app:cpb_textIdle="提交" />
 
     </LinearLayout>
 
