--- a/tvcust/src/main/res/layout/item_recycle_order.xml
+++ b/tvcust/src/main/res/layout/item_recycle_order.xml
@@ -115,6 +115,21 @@
                 android:text="取消订单" />
 
             <TextView
+                android:id="@+id/text_order_cui"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_nomal"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:gravity="center"
+                android:background="@drawable/shape_rect_corner_blue"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="5dp"
+                android:text="催一催" />
+
+            <TextView
                 android:id="@+id/text_order_allocate"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_nomal"
@@ -130,7 +145,7 @@
                 android:text="订单分配" />
 
             <TextView
-                android:id="@+id/text_order_assist"
+                android:id="@+id/text_order_eva"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_nomal"
                 android:layout_width="80dp"
@@ -142,7 +157,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="5dp"
-                android:text="技术援助" />
+                android:text="立即评价" />
 
             <TextView
                 android:id="@+id/text_order_finish"
