--- a/tvcust/src/main/res/layout/activity_msg.xml
+++ b/tvcust/src/main/res/layout/activity_msg.xml
@@ -16,7 +16,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            app:navigationIcon="@drawable/icon_bank"
+            app:navigationIcon="@drawable/icon_back"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
