--- a/tvcust/src/main/res/layout/activity_findpsw.xml
+++ b/tvcust/src/main/res/layout/activity_findpsw.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:src="@drawable/icon_bank"/>
+            android:src="@drawable/icon_back"/>
 
         <LinearLayout
             android:layout_width="match_parent"
