--- a/tvcust/src/main/res/layout/activity_orderallocate.xml
+++ b/tvcust/src/main/res/layout/activity_orderallocate.xml
@@ -19,8 +19,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
-            app:navigationIcon="@drawable/icon_bank"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+            app:navigationIcon="@drawable/icon_back"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -146,23 +146,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
+                android:paddingBottom="10dp"
                 android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:paddingBottom="10dp" />
+                android:paddingRight="5dp" />
 
         </android.support.v4.widget.SwipeRefreshLayout>
 
         <!--<TextView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="50dp"-->
-            <!--android:layout_marginBottom="10dp"-->
-            <!--android:layout_marginLeft="10dp"-->
-            <!--android:layout_marginRight="10dp"-->
-            <!--android:background="@color/sb_bk_dark"-->
-            <!--android:gravity="center"-->
-            <!--android:text="分配任务"-->
-            <!--android:textColor="@color/white"-->
-            <!--android:textSize="@dimen/text_big" />-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="50dp"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:background="@color/sb_bk_dark"-->
+        <!--android:gravity="center"-->
+        <!--android:text="分配任务"-->
+        <!--android:textColor="@color/white"-->
+        <!--android:textSize="@dimen/text_big" />-->
 
         <com.dd.CircularProgressButton
             android:id="@+id/btn_go"
@@ -172,15 +172,15 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
+            android:background="#00000000"
             android:textColor="@color/white"
             android:textSize="@dimen/text_big"
-            android:background="#00000000"
-            app:cpb_selectorIdle="@drawable/idle_state_selector"
             app:cpb_colorIndicator="@color/sb_blue"
             app:cpb_colorIndicatorBackground="@color/sb_blue_hint_trans"
             app:cpb_colorProgress="#00000000"
             app:cpb_iconComplete="@drawable/ic_action_accept"
             app:cpb_iconError="@drawable/ic_action_cancel"
+            app:cpb_selectorIdle="@drawable/idle_state_selector"
             app:cpb_textIdle="分配任务" />
 
     </LinearLayout>
