--- a/tvcust/src/main/res/layout/fragment_regist.xml
+++ b/tvcust/src/main/res/layout/fragment_regist.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:src="@drawable/icon_bank" />
+            android:src="@drawable/icon_back" />
 
         <com.sobey.common.view.UnScrollViewPager
             android:id="@+id/pager_regist"
